--- a/_references/01-MLE.ipynb
+++ b/_references/01-MLE.ipynb
@@ -106,7 +106,7 @@
     "    \\hat{\\sigma}^2 = \\frac{1}{N} \\sum_{i=1}^{N}{(x_i-\\hat{\\mu})^2}\n",
     "\\end{equation}\n",
     "\n",
-    "도출된 $\\hat\\mu$와 $\\hat\\sigma^2$이 likelihood function을 극대화하는 maximum likelihood estimator, 즉 우리가 알고 싶었던 Normal 분포의 파라미터 $\\theta$를 추정할 수 있도록 도와주는 추정량 또는 공식이 되겠습니다."
+    "도출된 $\\hat\\mu$와 $\\hat\\sigma^2$이 likelihood function을 극대화하는 maximum likelihood estimator, 즉 우리가 알고 싶었던 Normal 분포의 파라미터 $\\theta$를 추정하는 추정량 또는 공식이 되겠습니다."
    ]
   },
   {
@@ -280,11 +280,8 @@
    ],
    "source": [
     "plt.hist(data, bins=30, density=True, edgecolor='k')\n",
-    "plt.title(\"Histogram of exam scores\", fontsize=16)\n",
-    "plt.xlabel(\"Points\")\n",
-    "plt.ylabel(\"Percent\")\n",
     "plt.xlim([0, 550])\n",
-    "plt.savefig(\"../assets/references/mle_01.png\", dpi=300)"
+    "plt.savefig(\"../assets/references/mle_01.png\", dpi=200)"
    ]
   },
   {
@@ -343,7 +340,7 @@
     "         linewidth=2, label=\"#2: $\\mu$=400, $\\sigma$=60\")\n",
     "\n",
     "plt.legend()\n",
-    "plt.savefig(\"../assets/references/mle_02.png\", dpi=300)"
+    "plt.savefig(\"../assets/references/mle_02.png\", dpi=200)"
    ]
   },
   {
